# CorporateEquivalence

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  remap_edges.py  script.sh
anchored/: CMakeLists.txt
anchored/src/: create_random_R.py  flow.cpp  flow.h  frankwolfe.cpp  frankwolfe.h  main.cpp  mnp.cpp  mnp.h  parser.cpp  supergreedy.cpp  supergreedy.h
configs/: anchored.yaml  config.py  contra.yaml  dsg.yaml  dss.yaml  generate_slurms.py  hnsn.yaml  mincut.yaml
dsg/: CMakeLists.txt
dsg/dataset/remap/: close-cliques_R_ns10_nt201.txt  close-cliques_contra.txt  close-cliques_perturbed.txt
dsg/src/: fista.cpp  fista.h  frankwolfe.cpp  frankwolfe.h  greedypp.cpp  greedypp.h  incremental.cpp  incremental.h  main.cpp  mnp.cpp  mnp.h  parser.cpp  pushrelabel.cpp  pushrelabel.h  pushrelabel_contra.cpp  pushrelabel_contra.h  rcdm_permutation.cpp  rcdm_permutation.h  rcdm_utilities.cpp  rcdm_utilities.h
dss/: CMakeLists.txt
dss/src/: frankwolfe.cpp  frankwolfe.h  graph.cpp  graph.h  logger.h  main.cpp  mnp.cpp  mnp.h  perturbation.py  stats.cpp  stats.h  supergreedy.cpp  supergreedy.h  supergreedy__.cpp
output/adsg/: out.txt
output/cm/: out.txt
output/dsg/: out.txt
output/dss/: out.txt
sfm/: CMakeLists.txt
sfm/dataset/: m10.txt  parse_metis.py
sfm/src/: frankwolfe.cpp  frankwolfe.h  graph.cpp  graph.h  main.cpp  mincut.py  mnp.cpp  mnp.h  parse_dimacs.py  parser.cpp  parser.h  random_augment.py  stats.cpp  supergreedy.cpp  supergreedy.h
usss/: CMakeLists.txt
usss/dataset/: graph_ecommerce_updated
usss/src/: cmdline.h  flow.cpp  flow.h  frankwolfe.cpp  frankwolfe.h  main.cpp  mnp.cpp  mnp.h  stats.cpp  stats.h  supergreedy.cpp  supergreedy.h
